--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_main3">Main3Activity</string>
+    <string name="app_name">Interview Questions</string>
+    <string name="title_activity_main2">Subsection</string>
+    <string name="title_activity_main3">Questions</string>
 </resources>
 
